# llm_news_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml
config/: settings.yaml
src/: __init__.py  agent.py  main.py
src/filters/: __init__.py  llm_filter.py
src/monitors/: __init__.py  arxiv.py  base.py  huggingface.py  x_nitter.py  xiaohongshu.py
src/notifiers/: __init__.py  base.py  console.py  telegram.py
src/utils/: __init__.py  cache.py  config.py  logging.py
tests/: test_filters.py  test_monitors.py
